--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "deeptrade",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://deeptrade.co/",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.16.2",
