--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "swiper": "^8.0.6",
     "universal-cookie": "^4.0.4",
