--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "react-scripts": "5.0.0",
     "swiper": "^8.0.6",
     "universal-cookie": "^4.0.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-toastify": "^9.1.1"
   },
   "scripts": {
-    "start": "PORT=8009 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
