--- a/package.json
+++ b/package.json
@@ -8,25 +8,28 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
     "antd": "^4.19.3",
+    "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.1.1",
     "swiper": "^8.0.6",
     "universal-cookie": "^4.0.4",
-    "web-vitals": "^2.1.4",
-    "react-toastify": "^9.1.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "up":"git add . && git commit -m 'fixes' && git push origin saurav"
+    "up": "git add . && git commit -m 'fixes' && git push origin saurav"
   },
   "eslintConfig": {
     "extends": [
