--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "animate.css": "^4.1.1",
     "antd": "^5.3.1",
     "aos": "^2.3.4",
+    "axios": "^1.3.4",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-toastify": "^9.1.1",
