--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://deeptrade.co/",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@fortawesome/fontawesome-free": "^6.3.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +14,7 @@
     "aos": "^2.3.4",
     "axios": "^1.3.4",
     "bootstrap": "^5.1.3",
+    "mdb-react-ui-kit": "^5.1.0",
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^2.1.2",
