--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "up": "git add . && git commit -m 'changes in spop' && git push origin master"
+    "up": "git add . && git commit -m 'changes in parternship' && git push origin master"
   },
   "eslintConfig": {
     "extends": [
