--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "up": "git add . && git commit -m 'change footer' && git push origin master"
+    "up": "git add . && git commit -m 'add korea investment news' && git push origin master"
   },
   "eslintConfig": {
     "extends": [
