--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
+    "react-icons": "^4.10.1",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
@@ -37,7 +38,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "up": "git add . && git commit -m 'fix navbar' && git push origin master"
+    "up": "git add . && git commit -m 'update' && git push origin master"
   },
   "eslintConfig": {
     "extends": [
