--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "up": "git add . && git commit -m 'update' && git push origin master"
+    "up": "git add . && git commit -m 'add enterprises' && git push origin master"
   },
   "eslintConfig": {
     "extends": [
