--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://deeptrade.co/",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@ant-design/icons": "^4.7.0",
     "@fortawesome/fontawesome-free": "^6.3.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -31,14 +32,17 @@
     "react-toastify": "^9.1.1",
     "swiper": "^8.0.6",
     "universal-cookie": "^4.0.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "react-redux": "^8.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "up": "git add . && git commit -m 'add enterprises' && git push origin master"
+    "up": "git add . && git commit -m 'add enterprises and api logic login logic' && git push origin master"
   },
   "eslintConfig": {
     "extends": [
