--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "homepage": "https://deeptrade.co/",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.7",
     "@ant-design/icons": "^4.7.0",
     "@fortawesome/fontawesome-free": "^6.3.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -26,16 +26,17 @@
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-icons": "^4.10.1",
+    "react-redux": "^8.1.3",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-toastify": "^9.1.1",
-    "swiper": "^8.0.6",
-    "universal-cookie": "^4.0.4",
-    "web-vitals": "^2.1.4",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "react-redux": "^8.1.3"
+    "styled-components": "^6.0.8",
+    "swiper": "^8.0.6",
+    "universal-cookie": "^4.0.4",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -61,5 +62,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
