--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^2.1.2",
+    "react-calendar": "^4.6.0",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
-    "react-icons": "^4.10.1",
+    "react-icons": "^4.11.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.1.3",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.3.0",
@@ -43,7 +45,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "up": "git add . && git commit -m 'add enterprises and api logic login logic' && git push origin master"
+    "up": "git add . && git commit -m 'add calendar' && git push origin master"
   },
   "eslintConfig": {
     "extends": [
