--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "aos": "^2.3.4",
     "axios": "^1.3.4",
     "bootstrap": "^5.1.3",
+    "classnames": "^2.3.2",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
@@ -27,6 +28,7 @@
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-icons": "^4.11.0",
+    "react-loader-spinner": "^5.4.5",
     "react-modal": "^3.16.1",
     "react-redux": "^8.1.3",
     "react-responsive": "^9.0.2",
