--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "up": "git add . && git commit -m 'make it responsive' && git push origin master"
+    "up": "git add . && git commit -m 'add risk management' && git push origin master"
   },
   "eslintConfig": {
     "extends": [
