--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "homepage": "https://deeptrade.co/",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.3.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.14.20",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -19,12 +22,15 @@
     "aos": "^2.3.4",
     "axios": "^1.3.4",
     "bootstrap": "^5.1.3",
+    "chartjs-plugin-zoom": "^2.0.1",
     "classnames": "^2.3.2",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
+    "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.1.2",
     "react-calendar": "^4.6.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-icons": "^4.11.0",
@@ -47,7 +53,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "up": "git add . && git commit -m 'add risk management' && git push origin master"
+    "up": "git add . && git commit -m 'intergration' && git push origin master"
   },
   "eslintConfig": {
     "extends": [
