--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chartjs-plugin-zoom": "^2.0.1",
     "classnames": "^2.3.2",
     "mdb-react-ui-kit": "^5.1.0",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
     "react-apexcharts": "^1.4.1",
