--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "up": "git add . && git commit -m 'add responsive' && git push origin master"
+    "up": "git add . && git commit -m 'add filtering' && git push origin master"
   },
   "eslintConfig": {
     "extends": [
